--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -16,10 +16,13 @@ body {
     width: 100%;
     /* Set the fixed height of the footer here */
     height: 285px;
+    background-color: #09567B;
+    /*
     background-image: -webkit-linear-gradient(270deg, rgba(0, 84, 124, 1.00) 0%, rgba(60, 124, 166, 1.00) 100%);
     background-image: -moz-linear-gradient(270deg, rgba(0, 84, 124, 1.00) 0%, rgba(60, 124, 166, 1.00) 100%);
     background-image: -o-linear-gradient(270deg, rgba(0, 84, 124, 1.00) 0%, rgba(60, 124, 166, 1.00) 100%);
     background-image: linear-gradient(180deg, rgba(0, 84, 124, 1.00) 0%, rgba(60, 124, 166, 1.00) 100%);
+    */
     /* [disabled]margin: auto;
 */
     color: #FFFFFF;
