--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -17,14 +17,7 @@ body {
     /* Set the fixed height of the footer here */
     height: 285px;
     background-color: #09567B;
-    /*
-    background-image: -webkit-linear-gradient(270deg, rgba(0, 84, 124, 1.00) 0%, rgba(60, 124, 166, 1.00) 100%);
-    background-image: -moz-linear-gradient(270deg, rgba(0, 84, 124, 1.00) 0%, rgba(60, 124, 166, 1.00) 100%);
-    background-image: -o-linear-gradient(270deg, rgba(0, 84, 124, 1.00) 0%, rgba(60, 124, 166, 1.00) 100%);
-    background-image: linear-gradient(180deg, rgba(0, 84, 124, 1.00) 0%, rgba(60, 124, 166, 1.00) 100%);
-    */
-    /* [disabled]margin: auto;
-*/
+
     color: #FFFFFF;
 }
 
@@ -717,11 +710,15 @@ input[type="file"] {
 
 
 
-.tree{
+div .tree{
+
 }
 .tree ul {
-    padding-top: 20px; position: relative;
-
+    padding-top: 20px;
+    position: relative;
+    overflow: hidden;
+    overflow-x: auto;
+    overflow-y: auto;
     transition: all 0.5s;
     -webkit-transition: all 0.5s;
     -moz-transition: all 0.5s;
