--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -882,7 +882,9 @@ tr{
     background-clip: padding-box;
 }
 .card span.card-title {
-    color: #09567B;
+   /* color: #09567B;*/
+
+    color: #3c873e;
     font-size: 24px;
     font-weight: 300;
     text-transform: uppercase;
@@ -933,10 +935,12 @@ tr{
 }
 
 .card h1{
-    color: #09567B;
+    /*color: #09567B;*/
+    color: #3c873e;
 }
 .card-color-text{
-    color: #09567B;
+    /*color: #09567B;*/
+    color: #3c873e;
 }
 .card-color-text-normal{
     color: #000000;
