--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -882,9 +882,8 @@ tr{
     background-clip: padding-box;
 }
 .card span.card-title {
-   /* color: #09567B;*/
+   color: #09567B;
 
-    color: #3c873e;
     font-size: 24px;
     font-weight: 300;
     text-transform: uppercase;
@@ -935,12 +934,12 @@ tr{
 }
 
 .card h1{
-    /*color: #09567B;*/
-    color: #3c873e;
+    color: #09567B;
+    /*color: #3c873e;*/
 }
 .card-color-text{
-    /*color: #09567B;*/
-    color: #3c873e;
+    color: #09567B;
+    /*color: #3c873e;*/
 }
 .card-color-text-normal{
     color: #000000;
